add entities-daos: Word, Sentence, Record

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,26 @@
     <artifactId>CSE-thesis-relExtraction-2015</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>EMR Relation Extraction</name>
+
+    <!-- <parent> -->
+    <!-- <groupId>org.springframework.boot</groupId> -->
+    <!-- <artifactId>spring-boot-starter-parent</artifactId> -->
+    <!-- <version>1.1.5.RELEASE</version> -->
+    <!-- </parent> -->
+
     <dependencies>
+        <!-- Spring boot -->
+        <!-- <dependency> -->
+        <!-- <groupId>org.springframework.boot</groupId> -->
+        <!-- <artifactId>spring-boot-starter</artifactId> -->
+        <!-- </dependency> -->
+
+        <!-- <dependency> -->
+        <!-- <groupId>org.springframework.boot</groupId> -->
+        <!-- <artifactId>spring-boot-starter-data-jpa</artifactId> -->
+        <!-- </dependency> -->
+        <!-- End : Spring boot -->
+
         <!-- Stanford parse -->
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
@@ -26,7 +45,52 @@
             <artifactId>liblinear</artifactId>
             <version>1.95</version>
         </dependency>
-        <!-- end liblinear -->
+        <!-- END: liblinear -->
+
+        <!-- MySQL database driver -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.9</version>
+        </dependency>
+        <!-- END : MySQL database driver -->
+
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.2.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.common</groupId>
+            <artifactId>hibernate-commons-annotations</artifactId>
+            <version>4.0.1.Final</version>
+            <classifier>tests</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- END: Hibernate -->
+
     </dependencies>
 
 
@@ -34,7 +98,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <jdk.version>1.7</jdk.version>
         <app.version>${project.version}</app.version>
         <servlet.version>3.1.0</servlet.version>
         <slf4j.version>1.7.12</slf4j.version>
