--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,3 +16,6 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 #%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# Log everything. Good for troubleshooting
+log4j.logger.org.hibernate=INFO
