--- a/pom.xml
+++ b/pom.xml
@@ -90,15 +90,7 @@
         </dependency>
         <!-- END: Hibernate -->
 
-        <!-- Log4J -->
-        <!-- <dependency> -->
-        <!-- <groupId>org.slf4j</groupId> -->
-        <!-- <artifactId>slf4j-log4j12</artifactId> -->
-        <!-- <version>1.7.12</version> -->
-        <!-- </dependency> -->
-        <!-- END : Log4J -->
-
-        <!-- Lobback -->
+        <!-- Logback -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -119,7 +111,48 @@
             <version>3.1.0</version>
         </dependency>
         <!-- END : wiki api -->
+
+        <!-- VN Tokenizer -->
+        <dependency>
+            <groupId>vnTokenizer</groupId>
+            <artifactId>vnTokenizer</artifactId>
+            <version>4.1.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/vn.hus.nlp.tokenizer-4.1.1.jar</systemPath>
+        </dependency>
+        <!-- END : VN Tokenizer -->
+
+        <!-- VN Tagger -->
+        <dependency>
+            <groupId>vnTagger</groupId>
+            <artifactId>vnTagger</artifactId>
+            <version>4.1.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/vn.hus.nlp.tagger-4.2.0.jar</systemPath>
+        </dependency>
+        <!-- END : VN Tagger -->
+
+        <!-- <dependency> -->
+        <!-- <groupId>commons-cli</groupId> -->
+        <!-- <artifactId>commons-cli</artifactId> -->
+        <!-- <version>1.1</version> -->
+        <!-- </dependency> -->
+
+        <!-- JVNTextPro -->
+        <dependency>
+            <groupId>jvnTextPro</groupId>
+            <artifactId>vnTagger</artifactId>
+            <version>4.1.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/vnTextPro.jar</systemPath>
+        </dependency>
+        <!-- END : JVNTextPro -->
+
+
+
     </dependencies>
+
+
 
     <repositories>
         <repository>
