--- a/pom.xml
+++ b/pom.xml
@@ -112,26 +112,6 @@
         </dependency>
         <!-- END : wiki api -->
 
-        <!-- VN Tokenizer -->
-        <dependency>
-            <groupId>vnTokenizer</groupId>
-            <artifactId>vnTokenizer</artifactId>
-            <version>4.1.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/vn.hus.nlp.tokenizer-4.1.1.jar</systemPath>
-        </dependency>
-        <!-- END : VN Tokenizer -->
-
-        <!-- VN Tagger -->
-        <dependency>
-            <groupId>vnTagger</groupId>
-            <artifactId>vnTagger</artifactId>
-            <version>4.1.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/vn.hus.nlp.tagger-4.2.0.jar</systemPath>
-        </dependency>
-        <!-- END : VN Tagger -->
-
         <!-- <dependency> -->
         <!-- <groupId>commons-cli</groupId> -->
         <!-- <artifactId>commons-cli</artifactId> -->
@@ -141,7 +121,7 @@
         <!-- JVNTextPro -->
         <dependency>
             <groupId>jvnTextPro</groupId>
-            <artifactId>vnTagger</artifactId>
+            <artifactId>jvnTextPro</artifactId>
             <version>4.1.1</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/resources/vnTextPro.jar</systemPath>
@@ -152,15 +132,12 @@
 
     </dependencies>
 
-
-
     <repositories>
         <repository>
             <id>sonatype-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
     </repositories>
-
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
